@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-09-09
+2014-02-26 Andy
+- add XtcFilterTypeIdSrc filter class for filtering XTC contents
+
 Tag: V00-09-08
 2014-01-06 Andy Salnikov
 - XtcChunkDgIter::next() - add protection for corrupted headers, checks 
